--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-redux": "^7.1.5",
     "animejs": "^3.1.0",
     "connected-react-router": "^6.6.1",
-    "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "history": "^4.10.1",
@@ -34,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/eslint ./"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.21.5"
   }
 }
