--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,101 @@
-version: 2.1
-orbs:
-  node: circleci/node@1.1
+# version: 2.1
+# orbs:
+#   node: circleci/node@1.1
+# jobs:
+#   build:
+#     executor:
+#       name: node/default
+#       tag: '10.4'
+#     steps:
+#       - checkout
+#       - node/with-cache:
+#           steps:
+#             - run: npm install
+#       - run: npm i -g eslint
+#       - run: eslint public/test.js 
+
+Skip to content
+Pull requests
+Issues
+Marketplace
+Explore
+@AntoineQuesnel
+sebastien-lb /
+rubis-square
+
+1
+0
+
+    39
+
+Code
+Issues
+Pull requests 6
+Actions
+Projects
+Wiki
+Security
+
+    Insights
+
+rubis-square/.circleci/config.yml
+@sebastien-lb
+sebastien-lb ci: add circle ci config
+Latest commit a60eca5 on Dec 8, 2019
+History
+1 contributor
+40 lines (32 sloc) 1013 Bytes
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
+version: 2
 jobs:
   build:
-    executor:
-      name: node/default
-      tag: '10.4'
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:10.15
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-      - run: npm i -g eslint
-      - run: eslint public/test.js 
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      - run: yarn test
+
+      # build app
+      - run: yarn build
+© 2020 GitHub, Inc.
+Terms
+Privacy
+
+    Security
+    Status
+    Help
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
